# DeadlockServerPicker-linux

./: .gitignore  PKGBUILD  PKGBUILD-git  PKGBUILD-local  README.md  issues.txt  pyproject.toml
completions/: deadlock-server-picker.bash  deadlock-server-picker.fish  deadlock-server-picker.zsh
deadlock_server_picker/: __init__.py  cli.py  config.py  firewall.py  geolocation.py  latency_history.py  models.py  nftables.py  ping_service.py  preset_manager.py  regions.py  server_fetcher.py  tui.py  wine_detect.py
systemd/: README.md  deadlock-server-picker.service  deadlock-server-picker.user.service
tests/: __init__.py  test_cli.py  test_config.py  test_firewall.py  test_models.py  test_ping_service.py  test_preset_manager.py  test_regions.py  test_server_fetcher.py  test_tui.py
